package com.example.healthplanner;

import android.os.Bundle;
import androidx.appcompat.app.AppCompatActivity;

public class MealActivity extends AppCompatActivity {
    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_meal);
    }
}